Fix layout bug on homepage portfolio section

--- a/assets/_sass/components/_section.scss
+++ b/assets/_sass/components/_section.scss
@@ -11,7 +11,6 @@
 
 .section {
   display: flex;
-  flex-direction: column;
   position: relative;
   min-height: 100vh;
 
